--- a/dunk.cabal
+++ b/dunk.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Request
   other-modules:
       Paths_dunk
   hs-source-dirs:
